tests/snapshots/examples_fixtures/suggestions__simple_typo.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/suggestions/simple_typo.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/suggestions/simple_typo.flx:7:1
  |
7 | print(messge);
  | ^^^^^^^^^^^^^^
  | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/suggestions/simple_typo.flx:7:1
  |
7 | print(messge);
  | ^^^^^^^^^^^^^^
  | -------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `messge`.

  --> examples/suggestions/simple_typo.flx:7:7
  |
7 | print(messge);
  |       ^^^^^^

Hint:
  Define it first: let messge = ...;


Help:
  Did you mean one of: `message`, `merge`?

Found 3 errors.
== stdout ==
<not executed>
